# test-django

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/fixtures/: transaction.json
config/: settings.py  urls.py
src/api/: models.py  serializers.py  urls.py  views.py
src/config/: settings.py  urls.py
src/tg_bot/: handlers.py  keyboards.py
tg_bot/: fetch_data.py  handlers.py  keyboards.py  main.py
users/fixtures/: users.json
