[tool.poetry]
name = "test-django"
version = "0.1.0"
description = ""
authors = ["DmitriyDecadenz <dima.hubul@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
aiogram = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
